--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -406,7 +406,7 @@ body {
 
     }
     .premium-btn {
-        padding: 16px;
+        /* padding: 16px; */
         max-width: 50%;
         width: 100%;
         margin: 10px auto;
