--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -171,7 +171,7 @@ body {
     flex-direction: column;
     align-self: center;
     padding: 20px 40px 20px;
-    overflow-y: auto;
+    overflow-y: hidden;
     max-height: calc(100vh - 55px);
     scrollbar-width: none;
     -ms-overflow-style: none;
@@ -591,7 +591,7 @@ body {
     }
   }
   /* ========== DESKTOP <= 1400px ONLY ========== */
-  @media screen and (min-width: 1200px) and (max-width: 1600px) {
+  @media screen and (min-width: 1200px) and (max-width: 1700px) {
     height: calc(100vh - 55px);
     min-height: unset;
     max-height: unset;
