--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -138,6 +138,8 @@ body {
 .mb-10 {
   margin-bottom: 15px !important;
 }
+.justify-center {justify-content: center;}
+.text-right {text-align: right;}
 
 /* Login Page Start */
 .login_wrap {
@@ -405,6 +407,29 @@ body {
         font-family: var(--font-family-base);
 
     }
+    .forget_link {
+        text-align: right;
+        color: #e5741f;
+        font-size: 14px;
+        line-height: 18px;
+        font-weight: 500;
+        letter-spacing: 0;
+        font-style: normal;
+        font-family: var(--font-family-base);
+        margin-bottom: 0px;
+        &:hover {
+            text-decoration: underline;
+        }
+    }
+    .error-message {
+      color: var(--like-color);
+      letter-spacing: 0;
+      font-size: 12px;
+      font-style: normal;
+      font-weight: 500;
+      line-height: 16px;
+      font-family: var(--font-family-base);
+    }
     .premium-btn {
         /* padding: 16px; */
         max-width: 50%;
@@ -603,7 +628,7 @@ body {
         .main_cont {
             max-width: 100%;
             max-height: 100%;
-            overflow: hidden;
+            overflow: unset;
             gap: 8px;
             .logo_wrap {
                 max-width: 150px;
