--- a/public/styles/small-components/responsive.css
+++ b/public/styles/small-components/responsive.css
@@ -436,7 +436,7 @@
                     }
 
                     .rel-user-more-opts-wrapper {
-                        &[data-active], .active {
+                        &[data-active] {
                             .rel-user-more-opts-trigger-icon {
                                 svg {
                                     path {}
