--- a/public/styles/pages/discover-page/layout.css
+++ b/public/styles/pages/discover-page/layout.css
@@ -1,5 +1,5 @@
 /* Responsive Styles */
-@import url('./responsive.css');
+/* @import url('./responsive.css'); */
 
 .discovery-page-container {
     .discovery-page-content-container {
