--- a/public/styles/style.css
+++ b/public/styles/style.css
@@ -1004,4 +1004,200 @@ body {
   top: 0px;
   position: fixed;
 }
-  
+
+.video_wrap {
+  align-items: start;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  overflow: hidden;
+  background-color: white;
+  border-radius: 20px;
+  box-shadow: var(--card-shadow);
+  transition: var(--transition-normal);
+  .video_fream {
+    width: 100%;
+    height: 100%;
+    min-height: 300px;
+  }
+  .vdocard-footer {
+    width: 100%;
+    padding: 10px;
+    gap: 6px;
+    display: flex;
+    align-items: center;
+    .profile-card {
+      padding: 0px;
+    }
+    .meta-bar {
+      background: #f4f4f4;
+      border-radius: 14px;
+      justify-content: space-between;
+      align-items: center;
+      gap: 10px;
+      padding: 8px 10px;
+      display: flex;
+      white-space: nowrap;
+      .meta-item {
+        display: flex;
+        align-items: center;
+        gap: 6px;
+        color: var(--color-text);
+        font-size: 13px;
+      }
+      .meta-actions {
+        display: flex;
+        gap: 6px;
+      }
+      .view {
+        background: #f9f9f9;
+        border: 1.5px solid #ebebeb;
+        padding: 5px 10px;
+        border-radius: 8px;
+      }
+      .meta-actions a {
+        gap: 3px;
+        font-size: 13px;
+        color: var(--color-text);
+        background-color: #e4e4e4;
+        cursor: pointer;
+        will-change: transform;
+        border: none;
+        border-radius: 8px;
+        justify-content: center;
+        align-items: center;
+        padding: 5px 10px;
+        display: inline-flex;
+        transition: var(--transition-fast);
+        &:hover {
+          background: #f9f9f9;
+        }
+        &.favorite {
+          color: #c0392b;
+          font-weight: bold;
+        }
+      }
+    }
+  }
+}
+
+.modal {
+  position: fixed;
+  inset: 0;
+  background: #000000b8;
+  z-index: 999;
+  backdrop-filter: blur(2px);
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: opacity 0.25s ease;
+  transition: var(--transition-fast);
+  display: none;
+  opacity: 0;
+  .modal-wrap {
+    background: #FFF;
+    padding: 30px;
+    position: relative;
+    width: 100%;
+    max-width: 650px;
+    background-color: white;
+    border-radius: 20px;
+    box-shadow: 0px 6px 12px -4px #0808081F, 0px 2px 13.5px 1px #08080803;
+    transition: var(--transition-fast);
+    .close-btn {
+      display: block;
+      margin-left: auto;
+    }
+    .title {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+      color: var(--color-text-active);
+      font-size: 26px;
+      font-weight: 500;
+      font-style: normal;
+      line-height: 100%;
+      font-family: var(--font-family-heading);
+      margin-bottom: 10px;
+      .icons {
+        max-width: 24px;
+        height: auto;
+      }
+    }
+    p {
+      color: #505050;
+      font-size: 16px;
+      line-height: 20px;
+      font-weight: 400;
+      font-style: normal;
+      letter-spacing: 0px;
+      font-family: var(--font-family-base);
+    }
+    a {
+      color: #E67820;
+    }
+    ul {
+      margin: 15px 0px;
+      &.points {
+        li {
+          padding-inline-start: 15px;
+          &::before {
+            content: "";
+            color: #f5b400;
+            background: linear-gradient(103.7deg, #fece26 4.76%, #e5741f 118.16%);
+            width: 7px;
+            height: 7px;
+            border-radius: 30px;
+            position: absolute;
+            top: 50%;
+            left: 0px;
+            transform: translate(-0%, -50%);
+          }
+        }
+      }
+      li {
+        position: relative;
+        color: #505050;
+        font-size: 16px;
+        line-height: 20px;
+        font-weight: 400;
+        font-style: normal;
+        letter-spacing: 0px;
+        font-family: var(--font-family-base);
+        margin-bottom: 10px;
+        &:last-child {
+          margin-bottom: 0px;
+        }
+        b {
+          color: #505050;
+          font-weight: 700;
+        }
+      }
+    }
+    .actions {
+      display: flex;
+      align-items: center;
+      gap: 20px;
+      flex-wrap: wrap;
+      button {
+        max-width: 50%;
+      }
+    }
+    &.ageverify-modal {
+      padding: 50px;
+      display: flex;
+      flex-direction: column;
+      gap: 10px;
+      .close-btn {
+        position: absolute;
+        top: 20px;
+        right: 20px;
+      }
+    }
+  }
+  &.show {
+    display: flex;
+    opacity: 1;
+  }
+}
