--- a/public/styles/icons.css
+++ b/public/styles/icons.css
@@ -3,6 +3,7 @@
   width: 24px;
   height: 24px;
   background-repeat: no-repeat;
+  background-position: center;
   background-size: contain;
   vertical-align: middle;
   background-clip: unset !important;
@@ -141,6 +142,8 @@
 }
 .icons.close {
   mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M1.17 23.83L22.83 2.17M22.83 23.83L1.17 2.17' stroke='currentColor' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E");
-
   -webkit-mask-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 24 24'%3E%3Cpath d='M1.17 23.83L22.83 2.17M22.83 23.83L1.17 2.17' stroke='currentColor' stroke-width='2' stroke-linecap='round'/%3E%3C/svg%3E");
+}
+.icons.imageUpload {
+  background-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='19' height='17' viewBox='0 0 19 17' fill='none'><path d='M2.89341 15.7733L8.39053 10.2761C8.72054 9.94613 8.88555 9.78112 9.07582 9.7193C9.24319 9.66492 9.42348 9.66492 9.59085 9.7193C9.78112 9.78112 9.94613 9.94613 10.2761 10.2761L15.7366 15.7366M11 11L13.3905 8.60948C13.7205 8.27946 13.8855 8.11445 14.0758 8.05263C14.2432 7.99825 14.4235 7.99825 14.5908 8.05263C14.7811 8.11445 14.9461 8.27946 15.2761 8.60947L17.6667 11M7.66667 6C7.66667 6.92047 6.92047 7.66667 6 7.66667C5.07953 7.66667 4.33333 6.92047 4.33333 6C4.33333 5.07953 5.07953 4.33333 6 4.33333C6.92047 4.33333 7.66667 5.07953 7.66667 6ZM5 16H13.6667C15.0668 16 15.7669 16 16.3016 15.7275C16.772 15.4878 17.1545 15.1054 17.3942 14.635C17.6667 14.1002 17.6667 13.4001 17.6667 12V5C17.6667 3.59987 17.6667 2.8998 17.3942 2.36502C17.1545 1.89462 16.772 1.51217 16.3016 1.27248C15.7669 1 15.0668 1 13.6667 1H5C3.59987 1 2.8998 1 2.36502 1.27248C1.89462 1.51217 1.51217 1.89462 1.27248 2.36502C1 2.8998 1 3.59987 1 5V12C1 13.4001 1 14.1002 1.27248 14.635C1.51217 15.1054 1.89462 15.4878 2.36502 15.7275C2.8998 16 3.59987 16 5 16Z' stroke='%23505050' stroke-width='2' stroke-linecap='round' stroke-linejoin='round'/></svg>");
 }
