--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -1819,7 +1819,7 @@ body {
       }
     }
     h5 {
-      color: #505050;
+      color: #505050eb;
       font-style: normal;
       font-size: 16px;
       line-height: 100%;
@@ -1829,9 +1829,9 @@ body {
       font-family: var(--font-family-base);
     }
     p {
-      color: #505050;
+      color: #505050eb;
       font-size: 16px;
-      line-height: 20px;
+      line-height: 23px;
       font-weight: 500;
       font-style: normal;
       letter-spacing: 0px;
@@ -1855,9 +1855,9 @@ body {
         position: relative;
         list-style: none;
         padding-left: 35px;
-        color: #505050;
+        color: #505050eb;
         font-size: 16px;
-        line-height: 20px;
+        line-height: 23px;
         font-weight: 500;
         font-family: var(--font-family-base);
         margin-bottom: 10px;
