--- a/public/styles/style.scss
+++ b/public/styles/style.scss
@@ -6,6 +6,9 @@ body {
   background: #F4F4F4;
 }
 
+// color Define
+.text-green {color: #22C55E !important;} 
+
 /* loader Start */
 .loader {
   width: 26px;
@@ -316,6 +319,9 @@ body {
 }
 
 /* Custome class Start  */
+.mt-0 {
+  margin-top: 0px !important;
+}
 .mb-0 {
   margin-bottom: 0px !important;
 }
@@ -1948,6 +1954,90 @@ body {
   }
 }
 
+.history_wrap {
+  background: #FFF;
+  gap: 10px;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  align-items: center;
+  justify-content: space-between;
+  border-radius: 19px;
+  padding: 10px 20px;
+  border: 1.5px solid #f4f4f4;
+  .rline {
+    border-right: 1px solid #cdcacacc;
+  }
+  p {
+    text-align: center;
+    color: #505050;
+    font-size: 12px;
+    line-height: 16px;
+    font-weight: 500;
+    font-style: normal;
+    letter-spacing: 0;
+    margin-bottom: 3px;
+  }
+  h3 {
+    text-align: center;
+    font-size: 20px;
+    line-height: 100%;
+    letter-spacing: 0px;
+    font-weight: 400;
+    font-style: normal;
+    text-transform: capitalize;
+  }
+}
+.payout_wrap {
+  gap: 10px;
+  padding: 10px;
+  border-radius: 20px;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  background-color: #F4F4F4;
+  h3 {
+    color: #020202;
+    font-size: 20px;
+    line-height: 100%;
+    font-weight: 400;
+    letter-spacing: 0px;
+  }
+  p {
+    color: #505050;
+    font-weight: 500;
+    font-size: 12px;
+    line-height: 16px;
+    letter-spacing: 0px;
+  }
+}
+.icntext_wrap {
+  gap: 6px;
+  padding: 0px;
+  display: flex;
+  align-items: center;
+  .iconsbox {
+    cursor: pointer;
+    width: 40px;
+    min-width: 40px;
+    min-height: 40px;
+    transition: var(--transition-fast);
+    background: #FFF;
+    border: 1px solid #f4f4f4;
+    border-radius: 12px;
+    justify-content: center;
+    align-items: center;
+    display: flex;
+  }
+  h3 {
+    color: var(--color-text);
+    font-weight: 400;
+    font-size: 20px;
+    line-height: 100%;
+    text-transform: capitalize;
+    font-family: var(--font-family-heading);
+  }
+}
+
 .subscriptions_containt {
   margin-top: 10px;
   .rel-users-wrapper {
@@ -2018,36 +2108,41 @@ body {
         }
       }
     }
-    .date_wrap {
+    .date_box {
       display: flex;
       align-items: center;
-      gap: 5px;
-      .containt {
+      gap: 6px;
+      .date_wrap {
         display: flex;
-        flex-direction: column;
-        gap: 1px;
-      }
-      .icons {
-        width: 18px;
-        height: 18px;
-      }
-      span {
-        color: #505050;
-        font-weight: 500;
-        font-style: normal;
-        font-size: 9px;
-        line-height: 9px;
-        letter-spacing: 0px;
-        margin-bottom: 0px;
-      }
-      p {
-        color: #444444;
-        font-weight: 600;
-        font-style: normal;
-        font-size: 10px;
-        line-height: 14px;
-        letter-spacing: 0px;
-        margin-bottom: 0px;
+        align-items: center;
+        gap: 5px;
+        .containt {
+          display: flex;
+          flex-direction: column;
+          gap: 1px;
+        }
+        .icons {
+          width: 18px;
+          height: 18px;
+        }
+        span {
+          color: #505050;
+          font-weight: 500;
+          font-style: normal;
+          font-size: 9px;
+          line-height: 9px;
+          letter-spacing: 0px;
+          margin-bottom: 0px;
+        }
+        p {
+          color: #444444;
+          font-weight: 600;
+          font-style: normal;
+          font-size: 10px;
+          line-height: 14px;
+          letter-spacing: 0px;
+          margin-bottom: 0px;
+        }
       }
     }
     .rel-user-action-btn {
@@ -2065,5 +2160,229 @@ body {
         }
       }
     }
+  }
+  /* ========== Mobile (max-width: 767px) ========== */
+  @media (max-width: 767px) {
+    .user-subbox {
+      flex-wrap: wrap;
+      .rel-user-profile {
+        order: 1;
+        .profile-card {
+          .profile-card__avatar {
+            width: 65px;
+          }
+          .profile-card__info {
+            .profile-card__name {
+              font-size: 16px;
+              line-height: 20px;
+            }
+          }
+        }
+      }
+      .rel-user-action-btn {
+        order: 2;
+        width: 100%;
+        max-width: 30%;
+      }
+      .date_box {
+        order: 3;
+        gap: 12px;
+        .date_wrap {
+          .containt {
+          }
+          .icons {
+            width: 20px;
+            height: 20px;
+          }
+          span {
+            font-size: 10px;
+            line-height: 10px;
+          }
+          p {
+            font-size: 12px;
+            line-height: 16px;
+          }
+        }
+      }
+    }
+  }
+}
+
+.wtransactions_containt {
+  margin-top: 10px;
+  .rel-user-box {
+    padding: 8px;
+    gap: 10px;
+    border-radius: 18px;
+    background-color: #F4F4F4;
+    .rel-user-profile-action {
+      .rel-user-profile {
+        .profile-card {
+          padding: 0px;
+          .profile-card__avatar {
+            width: 48px;
+            &::before {
+              content: '';
+              display: block;
+              position: absolute;
+              inset: 0;
+              border-radius: inherit;
+              border: 2px solid #FFFFFF7A;
+            }
+          }
+          .profile-card__info {
+            .profile-card__name {
+              font-size: 14px !important;
+              line-height: 18px !important;
+            }
+          }
+          .profile-card__username {
+            &.tphead {
+              font-size: 10px;
+              line-height: 12px;
+              font-weight: 500;
+            }
+            .badge {
+              color: #000;
+              border-radius: 6px;
+              padding: 3px 5px;
+              font-size: 9px;
+              font-weight: 500;
+              line-height: 10px;
+              &.success {
+                color: #22c55e;
+                background: #22c55e26;
+              }
+            } 
+          }
+        }
+      }
+    }
+    .date_box {
+      display: flex;
+      align-items: center;
+      gap: 6px;
+      .date_wrap {
+        display: flex;
+        align-items: center;
+        gap: 5px;
+        .containt {
+          display: flex;
+          flex-direction: column;
+          gap: 1px;
+        }
+        .icons {
+          width: 18px;
+          height: 18px;
+        }
+        span {
+          color: #505050;
+          font-weight: 500;
+          font-style: normal;
+          font-size: 9px;
+          line-height: 9px;
+          letter-spacing: 0px;
+          margin-bottom: 0px;
+        }
+        p {
+          color: #444444;
+          font-weight: 600;
+          font-style: normal;
+          font-size: 10px;
+          line-height: 14px;
+          letter-spacing: 0px;
+          margin-bottom: 0px;
+        }
+      }
+    }
+    .rel-user-desc {
+      background-color: #FFF;
+      padding: 10px;
+      border-radius: 10px 10px 20px 20px;
+      padding-left: 10px;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      gap: 10px;
+      p {
+        color: #00000099;
+        font-weight: 500;
+        font-size: 12px;
+        line-height: 16px;
+        letter-spacing: 0px;
+        display: -webkit-box;
+        -webkit-line-clamp: 1;
+        -webkit-box-orient: vertical;
+        overflow: hidden;
+        &.heading {
+          color: #505050;
+          font-size: 10px;
+          line-height: 14px;
+        }
+      }
+      .rel-user-actions {
+        flex-shrink: 0;
+        button {
+          padding: 10px 0px 10px;
+          min-width: 76px;
+          max-width: 76px;
+          border-radius: 10px;
+          font-size: 11px;
+          span {
+            font-size: 11px;
+          }
+          &:hover {
+            transform: translateY(-1px);
+          }
+        }
+      }
+    }
+    &.hist-box {
+      .rel-user-profile-action {
+        .rel-user-profile {
+          .profile-card {
+            padding: 0px;
+            .profile-card__avatar {
+              border-radius: 10px;
+              width: 34px !important;
+              background-color: #FFF;
+              display: grid;
+              place-items: center;
+              &::before {
+                content: unset;
+              }
+            }
+            .profile-card__info {
+              .profile-card__name {
+                font-size: 14px !important;
+                line-height: 18px !important;
+              }
+              .profile-card__badge {
+                .badge {
+                  color: #000;
+                  border-radius: 6px;
+                  padding: 3px 5px;
+                  font-size: 9px;
+                  font-weight: 500;
+                  line-height: 10px;
+                  text-overflow: ellipsis;
+                  overflow: hidden;
+                  white-space: nowrap;
+                  max-width: 30px;
+                  &.success {
+                    color: #22c55e;
+                    background: #22c55e26;
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    }
+  }
+  /* ========== Mobile (max-width: 767px) ========== */
+  @media (max-width: 767px) {
+    
   }
 }
